Validating just one field if the name is equal.

--- a/index.html
+++ b/index.html
@@ -63,7 +63,9 @@
           <div class="demo">
             <form id="required-demo">
               <input type="text" data-validaty="required" />
-              <input type="checkbox" data-validaty="required" />
+
+              <input type="checkbox" name="checkbox" data-validaty="required" />
+              <input type="checkbox" name="checkbox" data-validaty="required" />
 
               <input type="radio" name="radio" data-validaty="required" />
               <input type="radio" name="radio" data-validaty="required" />
