Separating the helper methods in spec_helper.js.

--- a/spec/run.html
+++ b/spec/run.html
@@ -17,6 +17,7 @@
 	<script type="text/javascript" src="lib/jasmine-html.js"></script>
 	<script type="text/javascript" src="lib/jasmine-jquery.js"></script>
 
+  <script type="text/javascript" src="spec_helper.js"></script>
 	<script type="text/javascript" src="spec.js"></script>
 </head>
 <body>
