Adding a hash on each binded field.

--- a/index.html
+++ b/index.html
@@ -588,7 +588,7 @@
 
           <div class="demo">
             <form id="blur-demo">
-              <input id="keypress-demo" type="text" data-validaty="rangelength:5:10 on:blur:keyup" />
+              <input type="text" data-validaty="rangelength:5:10 on:blur:keyup" />
 
               <div class="button">
                 <i class="icon-ok"></i>
