--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
 <html lang="en" dir="ltr">
 <head>
   <meta charset="utf-8">
-  <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
+  <meta content="DPR, Viewport-Width, Width" http-equiv="Accept-CH">
+  <meta content="IE=edge, chrome=1" http-equiv="X-UA-Compatible">
   <meta content="width=device-width, initial-scale=1, user-scalable=no" name="viewport">
+  <meta content="yes" name="apple-mobile-web-app-capable">
 
   <title>JQuery Validaty - A Validation Plugin</title>
 
