fix jquery path

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <link type="text/css" rel="stylesheet" href="demo/css/application.css">
   <link type="text/css" rel="stylesheet" href="lib/jquery.validaty.css" />
 
-  <script type="text/javascript" src="demo/js/jquery.min.js"></script>
+  <script type="text/javascript" src="vendor/jquery.min.js"></script>
   <script type="text/javascript" src="lib/jquery.validaty.js"></script>
   <script type="text/javascript" src="lib/jquery.validaty.validators.js"></script>
 </head>
