--- a/spec/run.html
+++ b/spec/run.html
@@ -30,6 +30,10 @@
 
   <!-- specs -->
   <script src="spec.js"></script>
+  <script src="javascripts/functions/destroy_spec.js"></script>
+  <script src="javascripts/functions/valid_spec.js"></script>
+  <script src="javascripts/functions/validate_spec.js"></script>
+  <script src="javascripts/functions/validator_spec.js"></script>
 </head>
 <body>
   <div class="fixtury"></div>
