extract specs for a better view

--- a/spec/run.html
+++ b/spec/run.html
@@ -29,11 +29,46 @@
   <script src="lib/spec.helper.js"></script>
 
   <!-- specs -->
-  <script src="spec.js"></script>
+  <script src="javascripts/actions/blur_spec.js"></script>
+  <script src="javascripts/actions/focus_spec.js"></script>
+  <script src="javascripts/actions/submit_spec.js"></script>
+
+  <script src="javascripts/callbacks/on_valid_spec.js"></script>
+
   <script src="javascripts/functions/destroy_spec.js"></script>
   <script src="javascripts/functions/valid_spec.js"></script>
   <script src="javascripts/functions/validate_spec.js"></script>
   <script src="javascripts/functions/validator_spec.js"></script>
+
+  <script src="javascripts/helpers/get_params_spec.js"></script>
+
+  <script src="javascripts/markup/fields_spec.js"></script>
+
+  <script src="javascripts/options/balloon_spec.js"></script>
+  <script src="javascripts/options/fade_spec.js"></script>
+  <script src="javascripts/options/focus_spec.js"></script>
+
+  <script src="javascripts/validations/contain_spec.js"></script>
+  <script src="javascripts/validations/dateiso_spec.js"></script>
+  <script src="javascripts/validations/digits_spec.js"></script>
+  <script src="javascripts/validations/email_spec.js"></script>
+  <script src="javascripts/validations/equal_spec.js"></script>
+  <script src="javascripts/validations/maxcheck_spec.js"></script>
+  <script src="javascripts/validations/maxlength_spec.js"></script>
+  <script src="javascripts/validations/maxselect_spec.js"></script>
+  <script src="javascripts/validations/message_spec.js"></script>
+  <script src="javascripts/validations/mincheck_spec.js"></script>
+  <script src="javascripts/validations/minlength_spec.js"></script>
+  <script src="javascripts/validations/minselect_spec.js"></script>
+  <script src="javascripts/validations/number_spec.js"></script>
+  <script src="javascripts/validations/range_spec.js"></script>
+  <script src="javascripts/validations/rangecheck_spec.js"></script>
+  <script src="javascripts/validations/rangelength_spec.js"></script>
+  <script src="javascripts/validations/required_spec.js"></script>
+  <script src="javascripts/validations/url_spec.js"></script>
+  <script src="javascripts/validations/username_spec.js"></script>
+
+  <script src="javascripts/common_spec.js"></script>
 </head>
 <body>
   <div class="fixtury"></div>
