error target for error interceptor

--- a/spec/run.html
+++ b/spec/run.html
@@ -45,6 +45,7 @@
   <script src="javascripts/markup/fields_spec.js"></script>
 
   <script src="javascripts/options/balloon_spec.js"></script>
+  <script src="javascripts/options/error_target_spec.js"></script>
   <script src="javascripts/options/fade_spec.js"></script>
   <script src="javascripts/options/focus_spec.js"></script>
 
