--- a/spec/run.html
+++ b/spec/run.html
@@ -26,7 +26,7 @@
 
   <!-- helpers -->
   <script src="lib/fixtury.js"></script>
-  <script src="lib/spec.helper.js"></script>
+  <script src="spec_helper.js"></script>
 
   <!-- specs -->
   <script src="javascripts/actions/blur_spec.js"></script>
