up: rewrite all specs

--- a/spec/fixtures/error_target.html
+++ b/spec/fixtures/error_target.html
@@ -2,6 +2,8 @@
   <input data-validaty="validation-name" type="text">
 </form>
 
+<div data-error-target></div>
+
 <script>
   $('form').on('submit', function(event) {
     event.preventDefault();
