--- a/spec/fixtures/ignore.html
+++ b/spec/fixtures/ignore.html
@@ -1,5 +1,5 @@
 <form>
-  <input data-validaty="validation-name" type="text">
+  <input data-validaty="validation-name" data-validaty-ignore="validation-name" type="text">
 </form>
 
 <script>
