--- a/spec/fixtures/blur.html
+++ b/spec/fixtures/blur.html
@@ -1,5 +1,5 @@
 <form>
-  <input data-validaty="validation-name" type="text">
+  <input data-validaty="validation-name on:blur" type="text">
 </form>
 
 <script>
